[workspace]
resolver = "2"

exclude = [
    "external-crates/move-execution/v0/move-bytecode-verifier",
    "external-crates/move-execution/v0/move-stdlib",
    "external-crates/move-execution/v0/move-vm/runtime",
    "external-crates/move/move-abstract-stack",
    "external-crates/move/move-binary-format",
    "external-crates/move/move-binary-format/serializer-tests",
    "external-crates/move/move-borrow-graph",
    "external-crates/move/move-bytecode-verifier",
    "external-crates/move/move-bytecode-verifier/bytecode-verifier-tests",
    "external-crates/move/move-bytecode-verifier/fuzz",
    "external-crates/move/move-bytecode-verifier/invalid-mutations",
    "external-crates/move/move-bytecode-verifier/transactional-tests",
    "external-crates/move/move-command-line-common",
    "external-crates/move/move-compiler",
    "external-crates/move/move-compiler/transactional-tests",
    "external-crates/move/move-core/types",
    "external-crates/move/move-ir-compiler",
    "external-crates/move/move-ir-compiler/move-bytecode-source-map",
    "external-crates/move/move-ir-compiler/move-ir-to-bytecode",
    "external-crates/move/move-ir-compiler/move-ir-to-bytecode/syntax",
    "external-crates/move/move-ir-compiler/transactional-tests",
    "external-crates/move/move-ir/types",
    "external-crates/move/move-model",
    "external-crates/move/move-prover",
    "external-crates/move/move-prover/boogie-backend",
    "external-crates/move/move-prover/bytecode",
    "external-crates/move/move-prover/interpreter",
    "external-crates/move/move-prover/interpreter-testsuite",
    "external-crates/move/move-prover/interpreter/crypto",
    "external-crates/move/move-prover/move-abigen",
    "external-crates/move/move-prover/move-docgen",
    "external-crates/move/move-prover/move-errmapgen",
    "external-crates/move/move-prover/test-utils",
    "external-crates/move/move-stdlib",
    "external-crates/move/move-symbol-pool",
    "external-crates/move/move-vm/config",
    "external-crates/move/move-vm/integration-tests",
    "external-crates/move/move-vm/paranoid-tests",
    "external-crates/move/move-vm/profiler",
    "external-crates/move/move-vm/runtime",
    "external-crates/move/move-vm/test-utils",
    "external-crates/move/move-vm/transactional-tests",
    "external-crates/move/move-vm/types",
    "external-crates/move/testing-infra/enum-compat-util",
    "external-crates/move/testing-infra/module-generation",
    "external-crates/move/testing-infra/move-proc-macros",
    "external-crates/move/testing-infra/test-generation",
    "external-crates/move/testing-infra/transactional-test-runner",
    "external-crates/move/tools/move-bytecode-utils",
    "external-crates/move/tools/move-bytecode-viewer",
    "external-crates/move/tools/move-cli",
    "external-crates/move/tools/move-coverage",
    "external-crates/move/tools/move-disassembler",
    "external-crates/move/tools/move-explain",
    "external-crates/move/tools/move-package",
    "external-crates/move/tools/move-resource-viewer",
    "external-crates/move/tools/move-unit-test",
    "external-crates/move/tools/read-write-set",
    "external-crates/move/tools/read-write-set/dynamic",
    "external-crates/move/tools/read-write-set/types",
]

members = [
    "crates/anemo-benchmark",
    "crates/mysten-common",
    "crates/mysten-metrics",
    "crates/mysten-network",
    "crates/mysten-util-mem",
    "crates/mysten-util-mem-derive",
    "crates/prometheus-closure-metric",
    "crates/shared-crypto",
    "crates/sui",
    "crates/sui-adapter-transactional-tests",
    "crates/sui-archival",
    "crates/sui-benchmark",
    "crates/sui-cluster-test",
    "crates/sui-config",
    "crates/sui-core",
    "crates/sui-cost",
    "crates/sui-e2e-tests",
    "crates/sui-enum-compat-util",
    "crates/sui-faucet",
    "crates/sui-framework",
    "crates/sui-framework-snapshot",
    "crates/sui-framework-tests",
    "crates/sui-genesis-builder",
    "crates/sui-indexer",
    "crates/sui-json",
    "crates/sui-json-rpc",
    "crates/sui-json-rpc-tests",
    "crates/sui-json-rpc-types",
    "crates/sui-keys",
    "crates/sui-macros",
    "crates/sui-metric-checker",
    "crates/sui-move",
    "crates/sui-move-build",
    "crates/sui-network",
    "crates/sui-node",
    "crates/sui-open-rpc",
    "crates/sui-open-rpc-macros",
    "crates/sui-oracle",
    "crates/sui-proc-macros",
    "crates/sui-protocol-config",
    "crates/sui-protocol-config-macros",
    "crates/sui-proxy",
    "crates/sui-replay",
    "crates/sui-rosetta",
    "crates/sui-rpc-loadgen",
    "crates/sui-sdk",
    "crates/sui-simulator",
    "crates/sui-snapshot",
    "crates/sui-source-validation",
    "crates/sui-source-validation-service",
    "crates/sui-storage",
    "crates/sui-surfer",
    "crates/sui-swarm",
    "crates/sui-swarm-config",
    "crates/sui-telemetry",
    "crates/sui-test-transaction-builder",
    "crates/sui-test-validator",
    "crates/sui-tls",
    "crates/sui-tool",
    "crates/sui-transaction-builder",
    "crates/sui-transactional-test-runner",
    "crates/sui-types",
    "crates/sui-upgrade-compatibility-transactional-tests",
    "crates/sui-verifier-transactional-tests",
    "crates/telemetry-subscribers",
    "crates/test-cluster",
    "crates/transaction-fuzzer",
    "crates/typed-store",
    "crates/typed-store-derive",
    "crates/workspace-hack",
    "crates/x",
    "narwhal/config",
    "narwhal/consensus",
    "narwhal/crypto",
    "narwhal/executor",
    "narwhal/network",
    "narwhal/node",
    "narwhal/primary",
    "narwhal/storage",
    "narwhal/test-utils",
    "narwhal/types",
    "narwhal/worker",
    "sui-execution",
    "sui-execution/cut",
    "sui-execution/latest/sui-adapter",
    "sui-execution/latest/sui-move-natives",
    "sui-execution/latest/sui-verifier",
    "sui-execution/v0/sui-adapter",
    "sui-execution/v0/sui-move-natives",
    "sui-execution/v0/sui-verifier",
]

[workspace.package]
# This version string will be inherited by sui-core, sui-faucet, sui-node, sui-tools, sui-sdk, and sui crates.
version = "1.7.0"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, sui binary size would be > 1GB.
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

# Same as release, but build binary with debug symbols (binary size will be ~ 1GB).
[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

[profile.test.package.move-compiler]
# opt-level 2 for move-compiler reduces the size of some of its
# (recursive) stack frames by up to 10x, avoiding stack overflows.
opt-level = 2

[profile.simulator]
inherits = "test"
debug = true
debug-assertions = true
overflow-checks = true
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
anyhow = "1.0.71"
arc-swap = { version = "1.5.1", features = ["serde"] }
assert_cmd = "2.0.6"
async-recursion = "1.0.4"
async-trait = "0.1.61"
axum = { version = "0.6.6", default-features = false, features = ["headers", "tokio", "http1", "http2", "json", "matched-path", "original-uri", "form", "query"] }
axum-extra = "0.4.2"
axum-server = { version = "0.4.4", default-features = false, features = ["tls-rustls"] }
backoff = { version = "0.4.0", features = ["futures", "futures-core", "pin-project-lite", "tokio", "tokio_1"] }
base64 = "0.21.2"
bcs = "0.1.4"
better_any = "0.1.1"
bimap = "0.6.2"
bincode = "1.3.3"
bip32 = "0.4.0"
byteorder = "1.4.3"
bytes = "1.4.0"
cached = "0.43.0"
camino = "1.1.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.26", features = ["clock", "serde"] }
clap = { version = "3.2.17", features = ["derive"] }
# clap = { version = "4.3.2", features = ["derive"] }
collectable = "0.0.2"
colored = "2.0.0"
comfy-table = "6.1.3"
console-subscriber = "0.1.6"
const-str = "0.5.3"
criterion = { version = "0.4.0", features = ["async", "async_tokio", "html_reports"] }
crossterm = "0.25.0"
csv = "1.2.1"
dashmap = "5.4.0"
datatest-stable = "0.1.2"
derivative = "2.2.0"
derive-syn-parse = "0.1.5"
derive_builder = "0.12.0"
derive_more = "0.99.17"
diesel = { version = "2.0.3", features = ["chrono", "postgres", "r2d2", "serde_json", "64-column-tables"] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
diesel_migrations = { version = "2.0.0" }
dirs = "4.0.0"
duration-str = "0.5.0"
ed25519 = { version = "1.5.0", features = ["pkcs8", "alloc", "zeroize"] }
ed25519-consensus = { version = "2.0.1", features = ["serde"] }
either = "1.8.0"
enum_dispatch = "^0.3"
expect-test = "1.4.0"
eyre = "0.6.8"
fdlimit = "0.2.1"
fs_extra = "1.3.0"
futures = "0.3.25"
futures-core = "0.3.21"
git-version = "0.3.5"
governor = "0.5.1"
hashbrown = "0.12"
hdrhistogram = "7.5.1"
hex = "0.4.3"
hex-literal = "0.3.4"
highlight = "all"
http = "0.2.8"
http-body = "0.4.5"
humantime = "2.1.0"
hyper = "0.14.20"
im = "15"
impl-trait-for-tuples = "0.2.0"
indexmap = { version = "1.9.2", features = ["serde"] }
indicatif = "0.17.2"
inquire = "0.6.0"
insta = { version = "1.21.1", features = ["redactions", "yaml", "json"] }
integer-encoding = "3.0.1"
itertools = "0.10.5"
jemalloc-ctl = "^0.5"
jsonrpsee = { git="https://github.com/wlmyng/jsonrpsee.git", rev= "b1b300784795f6a64d0fcdf8f03081a9bc38bde8", features = ["full", "http-client", "jsonrpsee-core"] }
jsonrpsee-proc-macros = {git="https://github.com/wlmyng/jsonrpsee.git", rev= "b1b300784795f6a64d0fcdf8f03081a9bc38bde8"}
leb128 = "0.2.5"
linked-hash-map = "0.5.6"
lru = "0.10"
match_opt = "0.1.2"
mime = "0.3"
mockall = "0.11.4"
more-asserts = "0.3.1"
msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "bd870b9a11870a2618c55ba703d58fafd41d686c", package = "msim" }
msim-macros = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "bd870b9a11870a2618c55ba703d58fafd41d686c", package = "msim-macros" }
multiaddr = "0.17.0"
nexlint = { git = "https://github.com/nextest-rs/nexlint.git", rev = "94da5c787636dad779c340affa65219134d127f5" }
nexlint-lints = { git = "https://github.com/nextest-rs/nexlint.git", rev = "94da5c787636dad779c340affa65219134d127f5" }
ntest = "0.9.0"
num-bigint = "0.4.3"
num_cpus = "1.15.0"
num_enum = "0.6.1"
object_store = { version = "=0.5.4", features = ["aws", "aws_profile", "gcp", "azure"] }
once_cell = "1.18.0"
ouroboros = "0.15.5"
parking_lot = "0.12.1"
pkcs8 = { version = "0.9.0", features = ["std"] }
pprof = { version = "0.11.0", features = ["cpp", "frame-pointer", "criterion", "flamegraph"] }
pretty_assertions = "1.3.0"
prettytable-rs = "0.10.0"
proc-macro2 = "1.0.47"
prometheus = "0.13.3"
prometheus-http-query = { version = "0.6.6", default_features = false, features = ["rustls-tls"] }
proptest = "1.1.0"
proptest-derive = "0.3.0"
prost = "0.11.8"
prost-build = "0.11.8"
protobuf = {version="2.28", features=["with-bytes"]}
protobuf-src = "1.1.0"
quinn-proto = "^0.10.0"
quote = "1.0.23"
rand = "0.8.5"
rayon = "1.5.3"
rcgen = "0.9.2"
regex = "1.7.1"
reqwest = { version = "0.11.18", default_features= false, features = ["blocking", "json", "rustls-tls"] }
roaring = "0.10.1"
rocksdb = { version = "0.21.0", features = ["snappy", "lz4", "zstd", "zlib", "multi-threaded-cf"], default-features = false }
ron = "0.8.0"
rstest = "0.16.0"
rusoto_core = { version = "0.48.0", default_features=false, features=["rustls"] }
rusoto_kms = { version = "0.48.0", default_features=false, features=["rustls"] }
rust-version = "1.56.1"
rustls = { version = "0.20.4", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.2"
rustversion = "1.0.9"
rustyline = "9.1.2"
rustyline-derive = "0.7.0"
schemars = { version = "0.8.10", features = ["either"] }
scopeguard = "1.1"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde-name = "0.2.1"
serde-reflection = "0.3.6"
serde_json = { version = "1.0.95", features = ["preserve_order", "arbitrary_precision"] }
serde_repr = "0.1"
serde_test = "1.0.147"
serde_with = { version = "2.1.0", features = ["hex"] }
# serde_yaml = "0.9.21"
serde_yaml = "0.8.26"
shell-words = "1.1.0"
shellexpand = "3.1.0"
signature = "1.6.0"
similar = "2.2.0"
slip10_ed25519 = "0.1.3"
smallvec = "1.10.0"
snap = "1.1.0"
static_assertions = "1.1.0"
structopt = "0.3.26"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24.3"
syn = { version = "1.0.104", features = ["full", "derive", "extra-traits"] }
# syn = { version = "2", features = ["full", "fold", "extra-traits"] }
synstructure = "0.12"
sysinfo = "0.27.5"
tap = "1.0.1"
tempfile = "3.3.0"
test-fuzz = "3.0.4"
thiserror = "1.0.40"
tiny-bip39 = "1.0.0"
tokio = "1.28.1"
tokio-retry = "0.3"
tokio-rustls = "0.23"
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tokio-util = "0.7.4"
toml = { version = "0.7.4", features = ["preserve_order"] }
toml_edit = { version = "0.19.10" }
tonic = { version = "0.8.2", features = ["transport", "tls"] }
tonic-build = { version = "0.8.2", features = [ "prost", "transport" ] }
tonic-health = "0.8.0"
tower = { version = "0.4.12", features = ["full", "util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.4", features = ["cors", "full", "trace", "set-header", "propagate-header"] }
# tower-http = { version="0.4", features = ["trace"] }
tower-layer = "0.3.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["std", "smallvec", "fmt", "ansi", "time", "json", "registry", "env-filter"] }
ttl_cache = "0.5.1"
uint = "0.9.4"
unescape = "0.1.0"
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"]}
webpki = { version = "0.22.0", features = ["alloc", "std"] }
x509-parser = "0.14.0"
zstd = "0.12.3"
versions = "4.1.0"

# Move dependencies
move-binary-format = { path = "external-crates/move/move-binary-format" }
move-bytecode-utils = { path = "external-crates/move/tools/move-bytecode-utils" }
move-cli = { path = "external-crates/move/tools/move-cli" }
move-compiler = { path = "external-crates/move/move-compiler" }
move-core-types = { path = "external-crates/move/move-core/types", features = ["address32"] }
move-disassembler = { path = "external-crates/move/tools/move-disassembler" }
move-package = { path = "external-crates/move/tools/move-package" }
move-unit-test = { path = "external-crates/move/tools/move-unit-test" }
move-vm-config = { path = "external-crates/move/move-vm/config" }
move-vm-test-utils = { path = "external-crates/move/move-vm/test-utils", features = ["tiered-gas"] }
move-vm-types = { path = "external-crates/move/move-vm/types" }
move-vm-profiler = { path = "external-crates/move/move-vm/profiler" }
move-command-line-common = { path = "external-crates/move/move-command-line-common" }
move-transactional-test-runner = { path = "external-crates/move/testing-infra/transactional-test-runner" }
move-ir-types = { path = "external-crates/move/move-ir/types" }
move-prover = { path = "external-crates/move/move-prover" }
move-prover-boogie-backend = { path = "external-crates/move/move-prover/boogie-backend" }
move-stackless-bytecode = { path = "external-crates/move/move-prover/bytecode" }
move-symbol-pool = { path = "external-crates/move/move-symbol-pool" }
move-abstract-stack = { path = "external-crates/move/move-abstract-stack" }

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c961a01596a87e76f590c7e43aca9d57106dbbb1" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c961a01596a87e76f590c7e43aca9d57106dbbb1", package = "fastcrypto-zkp" }

# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "0f0ae8d8f222820a20b586088ea7a2941478a159" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "0f0ae8d8f222820a20b586088ea7a2941478a159" }
anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "0f0ae8d8f222820a20b586088ea7a2941478a159"}
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "0f0ae8d8f222820a20b586088ea7a2941478a159"}

### Workspace Members ###
anemo-benchmark = { path = "crates/anemo-benchmark" }
mysten-common = { path = "crates/mysten-common" }
mysten-metrics = { path = "crates/mysten-metrics" }
mysten-network = { path = "crates/mysten-network" }
mysten-util-mem = { path = "crates/mysten-util-mem" }
mysten-util-mem-derive = { path = "crates/mysten-util-mem-derive" }
prometheus-closure-metric = { path = "crates/prometheus-closure-metric" }
shared-crypto = { path = "crates/shared-crypto" }
sui = { path = "crates/sui" }
sui-adapter-transactional-tests = { path = "crates/sui-adapter-transactional-tests" }
sui-archival = { path = "crates/sui-archival" }
sui-benchmark = { path = "crates/sui-benchmark" }
sui-cluster-test = { path = "crates/sui-cluster-test" }
sui-config = { path = "crates/sui-config" }
sui-core = { path = "crates/sui-core" }
sui-cost = { path = "crates/sui-cost" }
sui-e2e-tests = { path = "crates/sui-e2e-tests" }
sui-enum-compat-util = { path = "crates/sui-enum-compat-util" }
sui-faucet = { path = "crates/sui-faucet" }
sui-framework = { path = "crates/sui-framework" }
sui-framework-snapshot = { path = "crates/sui-framework-snapshot" }
sui-framework-tests = { path = "crates/sui-framework-tests" }
sui-genesis-builder = { path = "crates/sui-genesis-builder" }
sui-indexer = { path = "crates/sui-indexer" }
sui-json = { path = "crates/sui-json" }
sui-json-rpc = { path = "crates/sui-json-rpc" }
sui-json-rpc-types = { path = "crates/sui-json-rpc-types" }
sui-keys = { path = "crates/sui-keys" }
sui-macros = { path = "crates/sui-macros" }
sui-metric-checker = { path = "crates/sui-metric-checker" }
sui-move = { path = "crates/sui-move" }
sui-move-build = { path = "crates/sui-move-build" }
sui-network = { path = "crates/sui-network" }
sui-node = { path = "crates/sui-node" }
sui-open-rpc = { path = "crates/sui-open-rpc" }
sui-open-rpc-macros = { path = "crates/sui-open-rpc-macros" }
sui-proc-macros = { path = "crates/sui-proc-macros" }
sui-protocol-config = { path = "crates/sui-protocol-config" }
sui-protocol-config-macros = { path = "crates/sui-protocol-config-macros" }
sui-proxy = { path = "crates/sui-proxy" }
sui-replay = { path = "crates/sui-replay" }
sui-rosetta = { path = "crates/sui-rosetta" }
sui-rpc-loadgen = { path = "crates/sui-rpc-loadgen" }
sui-sdk = { path = "crates/sui-sdk" }
sui-simulator = { path = "crates/sui-simulator" }
sui-snapshot = { path = "crates/sui-snapshot" }
sui-source-validation = { path = "crates/sui-source-validation" }
sui-source-validation-service = { path = "crates/sui-source-validation-service" }
sui-storage = { path = "crates/sui-storage" }
sui-surfer = { path = "crates/sui-surfer" }
sui-swarm = { path = "crates/sui-swarm" }
sui-swarm-config = { path = "crates/sui-swarm-config" }
sui-telemetry = { path = "crates/sui-telemetry" }
sui-test-transaction-builder = { path = "crates/sui-test-transaction-builder" }
sui-test-validator = { path = "crates/sui-test-validator" }
sui-tls = { path = "crates/sui-tls" }
sui-tool = { path = "crates/sui-tool" }
sui-transaction-builder = { path = "crates/sui-transaction-builder" }
sui-transactional-test-runner = { path = "crates/sui-transactional-test-runner" }
sui-types = { path = "crates/sui-types" }
sui-upgrade-compatibility-transactional-tests = { path = "crates/sui-upgrade-compatibility-transactional-tests" }
sui-verifier-transactional-tests = { path = "crates/sui-verifier-transactional-tests" }
telemetry-subscribers = { path = "crates/telemetry-subscribers" }
test-cluster = { path = "crates/test-cluster" }
transaction-fuzzer = { path = "crates/transaction-fuzzer" }
typed-store = { path = "crates/typed-store" }
typed-store-derive = { path = "crates/typed-store-derive" }
workspace-hack = { path = "crates/workspace-hack" }
x = { path = "crates/x" }

narwhal-config = { path = "narwhal/config" }
narwhal-consensus = { path = "narwhal/consensus" }
narwhal-crypto = { path = "narwhal/crypto" }
narwhal-executor = { path = "narwhal/executor" }
narwhal-network = { path = "narwhal/network" }
narwhal-node = { path = "narwhal/node" }
narwhal-primary = { path = "narwhal/primary" }
narwhal-storage = { path = "narwhal/storage" }
narwhal-test-utils = { path = "narwhal/test-utils" }
narwhal-types = { path = "narwhal/types" }
narwhal-worker = { path = "narwhal/worker" }

sui-execution = { path = "sui-execution" }
# sui-move-natives = { path = "sui-execution/latest/sui-move-natives", package = "sui-move-natives-latest" }
# sui-adapter = { path = "sui-execution/latest/sui-adapter", package = "sui-adapter-latest" }
# sui-verifier = { path = "sui-execution/latest/sui-verifier", package = "sui-verifier-latest" }
# move-stdlib = { path = "external-crates/move/move-stdlib" }
# move-vm-runtime = { path = "external-crates/move/move-vm/runtime" }
# move-bytecode-verifier = { path = "external-crates/move/move-bytecode-verifier" }
